// DBML Schema Definition for EdTech LMS - PostgreSQL
// Generated by teamwork_preview_explorer (Explorer 3)

Table User {
  id text [pk, unique, note: 'PK (UUID or Cognito Sub)']
  email text [unique, not null, note: 'Unique user email']
  passwordHash text [null]
  fullName text [not null]
  avatarURL text [null]
  cognitoSub text [unique, null]
  isActive boolean [not null, default: true]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Role {
  id text [pk, unique, note: 'PK (UUID)']
  roleName text [unique, not null]
  createdAt timestamp [not null]
}

Table UserRole {
  id text [pk, unique, note: 'PK (UUID)']
  userId text [not null]
  roleId text [not null]
  createdAt timestamp [not null]
}

Table Class {
  id text [pk, unique, note: 'PK (UUID)']
  name text [not null]
  description text [null]
  classCode text [unique, not null]
  teacherId text [not null, note: 'Logical FK to User.id']
  status text [not null, default: 'active']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table ClassSettings {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [unique, not null, note: 'FK to Class.id (1:1)']
  allowStudentPosts boolean [not null, default: true]
  allowStudentComments boolean [not null, default: true]
  theme text [not null, default: 'default']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Enrollment {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  studentId text [not null, note: 'Logical FK to User.id']
  status text [not null, default: 'enrolled']
  enrolledAt timestamp [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Topic {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  title text [not null]
  description text [null]
  order integer [not null, default: 0]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Material {
  id text [pk, unique, note: 'PK (UUID)']
  topicId text [not null, note: 'FK to Topic.id']
  title text [not null]
  description text [null]
  fileUrl text [not null]
  fileType text [null]
  uploadedBy text [not null, note: 'Logical FK to User.id']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Exercise {
  id text [pk, unique, note: 'PK (UUID)']
  topicId text [not null, note: 'FK to Topic.id']
  title text [not null]
  description text [null]
  dueDate timestamp [null]
  maxPoints double precision [not null, default: 100.0]
  createdBy text [not null, note: 'Logical FK to User.id']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Submission {
  id text [pk, unique, note: 'PK (UUID)']
  exerciseId text [not null, note: 'FK to Exercise.id']
  studentId text [not null, note: 'Logical FK to User.id']
  submittedAt timestamp [not null]
  status text [not null, default: 'submitted']
  points double precision [null]
  feedback text [null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table SubmissionFile {
  id text [pk, unique, note: 'PK (UUID)']
  submissionId text [not null, note: 'FK to Submission.id']
  fileUrl text [not null]
  fileName text [not null]
  fileSize integer [null]
  uploadedAt timestamp [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Grade {
  id text [pk, unique, note: 'PK (UUID)']
  submissionId text [not null, note: 'FK to Submission.id']
  gradedBy text [not null, note: 'Logical FK to User.id']
  points double precision [not null]
  feedback text [null]
  gradedAt timestamp [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table PrivateNote {
  id text [pk, unique, note: 'PK (UUID)']
  submissionId text [not null, note: 'FK to Submission.id']
  senderId text [not null, note: 'Logical FK to User.id']
  receiverId text [not null, note: 'Logical FK to User.id']
  content text [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table AttendanceLog {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  studentId text [not null, note: 'Logical FK to User.id']
  date timestamp [not null]
  status text [not null]
  recordedBy text [not null, note: 'Logical FK to User.id']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table AlertThreshold {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  metricType text [not null]
  thresholdValue double precision [not null]
  severity text [not null, default: 'medium']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table StudentPerformanceMetrics {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  studentId text [not null, note: 'Logical FK to User.id']
  attendanceRate double precision [not null, default: 100.0]
  assignmentCompletionRate double precision [not null, default: 100.0]
  averageGrade double precision [not null, default: 0.0]
  lastUpdated timestamp [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table AlertLog {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  studentId text [not null, note: 'Logical FK to User.id']
  alertType text [not null]
  message text [not null]
  severity text [not null, default: 'medium']
  status text [not null, default: 'unread']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table ClassPost {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  authorId text [not null, note: 'Logical FK to User.id']
  content text [not null]
  attachmentUrls "text[]" [not null, note: 'Array of attachment links']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table PostComment {
  id text [pk, unique, note: 'PK (UUID)']
  postId text [not null, note: 'FK to ClassPost.id']
  authorId text [not null, note: 'Logical FK to User.id']
  content text [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table QuizBank {
  id text [pk, unique, note: 'PK (UUID)']
  classId text [not null, note: 'FK to Class.id']
  title text [not null]
  questions jsonb [null]
  createdBy text [not null, note: 'Logical FK to User.id']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table Notification {
  id text [pk, unique, note: 'PK (UUID)']
  userId text [not null, note: 'Logical FK to User.id']
  title text [not null]
  content text [not null]
  isRead boolean [not null, default: false]
  type text [not null, default: 'general']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table DeviceToken {
  id text [pk, unique, note: 'PK (UUID)']
  userId text [not null, note: 'Logical FK to User.id']
  token text [not null]
  deviceType text [not null, default: 'web']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table SystemLog {
  id text [pk, unique, note: 'PK (UUID)']
  serviceName text [not null, default: 'core-api']
  level text [not null, default: 'info']
  message text [not null]
  metadata jsonb [null]
  timestamp timestamp [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

// Relations
Ref: UserRole.userId > User.id
Ref: UserRole.roleId > Role.id
Ref: Class.teacherId > User.id
Ref: ClassSettings.classId - Class.id
Ref: Enrollment.classId > Class.id
Ref: Enrollment.studentId > User.id
Ref: Topic.classId > Class.id
Ref: Material.topicId > Topic.id
Ref: Material.uploadedBy > User.id
Ref: Exercise.topicId > Topic.id
Ref: Exercise.createdBy > User.id
Ref: Submission.exerciseId > Exercise.id
Ref: Submission.studentId > User.id
Ref: SubmissionFile.submissionId > Submission.id
Ref: Grade.submissionId > Submission.id
Ref: Grade.gradedBy > User.id
Ref: PrivateNote.submissionId > Submission.id
Ref: PrivateNote.senderId > User.id
Ref: PrivateNote.receiverId > User.id
Ref: AttendanceLog.classId > Class.id
Ref: AttendanceLog.studentId > User.id
Ref: AttendanceLog.recordedBy > User.id
Ref: AlertThreshold.classId > Class.id
Ref: StudentPerformanceMetrics.classId > Class.id
Ref: StudentPerformanceMetrics.studentId > User.id
Ref: AlertLog.classId > Class.id
Ref: AlertLog.studentId > User.id
Ref: ClassPost.classId > Class.id
Ref: ClassPost.authorId > User.id
Ref: PostComment.postId > ClassPost.id
Ref: PostComment.authorId > User.id
Ref: QuizBank.classId > Class.id
Ref: QuizBank.createdBy > User.id
Ref: Notification.userId > User.id
Ref: DeviceToken.userId > User.id